--- a/provatopicos/src/components/Card.css
+++ b/provatopicos/src/components/Card.css
@@ -1,4 +1,4 @@
-Card {
+.Card {
     flex:1;
     display: flex;
     flex-direction: column;
@@ -24,8 +24,11 @@ Card {
 .Card.Green .Header { color: #FFF; background-color: #2e7d32;}
 .Card.Green .Content {background-color: #4caf50;}
 
-.Card.Blue .Header { color: #FFF; background-color: #1565c0;}
-.Card.Blue .Content {background-color: #2196f3;}
+.Card.Blue .Header { color: #FFF; background-color:#0b2849 ;}
+.Card.Blue .Content {background-color: #1565c0;}
 
 .Card.Purple .Header { color: #FFF; background-color: #6A1B9A;}
 .Card.Purple .Content {background-color: #9c27b0;}
+
+.Card.Yellow .Header { color: #FFF; background-color: #a54ddb;}
+.Card.Yellow .Content {background-color: #bdc015;}
